<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp2"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/dp8"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5">

                <ImageView
                    android:id="@+id/ivCopy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/copy"
                    android:src="@drawable/ic_content_copy_black_24dp" />

                <ImageView
                    android:id="@+id/ivAddToFav"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_to_fav"
                    android:src="@drawable/ic_favorite_black_24dp" />

                <ImageView
                    android:id="@+id/ivListen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/listen_to_message"
                    android:src="@drawable/ic_volume_up_black_24dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp2"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/dp4"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/card_background">

                    <TextView
                        android:id="@+id/tvMessage"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:contentDescription="@string/messages"
                        android:paddingBottom="@dimen/dp45"
                        android:paddingEnd="@dimen/dp12"
                        android:paddingStart="@dimen/dp12"
                        android:paddingTop="@dimen/dp20"
                        tools:text="Text message"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="@drawable/add_fab_background"
        android:contentDescription="@string/action_share"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_share_white_24dp" />
</RelativeLayout>